--- a/index.html
+++ b/index.html
@@ -4,9 +4,173 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <header class="header">
+      <div class="menulogo">
+        <img src="assets/images/logo.svg" alt="Logo sunnyside" />
+        <img
+          id="burgericon"
+          class="burgericon"
+          src="assets/images/icon-hamburger.svg"
+          alt="Menu icon"
+        />
+      </div>
+      <nav id="mobilemenu" class="nav hide">
+        <ul class="menuoption">
+          About
+        </ul>
+        <ul class="menuoption">
+          Services
+        </ul>
+        <ul class="menuoption">
+          Projects
+        </ul>
+        <ul class="contactbutton">
+          CONTACT
+        </ul>
+      </nav>
+      <div class="textarrow">
+        <h1 class="h1">WE ARE CREATIVES</h1>
+        <img
+          class="arrow"
+          src="assets/images/icon-arrow-down.svg"
+          alt="Arrow icon"
+        />
+      </div>
+    </header>
+    <main class="main">
+      <div class="grid">
+        <div class="box1"></div>
+        <div class="boxtext">
+          <h2 class="imgtitle">Transform your brand</h2>
+          <p class="text">
+            We are a full-service creative agency specializing in helping brands
+            grow fast. Engage your clients through compelling visuals that do
+            most of the marketing for you.
+          </p>
+          <h4 class="learnmore">LEARN MORE</h4>
+        </div>
+        <div class="box3"></div>
+        <div class="boxtext">
+          <h2 class="imgtitle">Stand out to the right audience</h2>
+          <p class="text">
+            Using a collaborative formula of designers, researchers,
+            photographers, videographers, and copywriters, we’ll build and
+            extend your brand in digital places.
+          </p>
+          <h4 class="learnmore">LEARN MORE</h4>
+        </div>
+        <div class="box5">
+          <h2 class="imgtitle title5">Graphic Design</h2>
+          <p class="text greentext">
+            Great design makes you memorable. We deliver artwork that
+            underscores your brand message and captures potential clients’
+            attention.
+          </p>
+        </div>
+        <div class="box6">
+          <h2 class="imgtitle title6">Photography</h2>
+          <p class="text bluetext">
+            Increase your credibility by getting the most stunning, high-quality
+            photos that improve your business image.
+          </p>
+        </div>
+      </div>
+      <div class="reviews">
+        <h3 class="h3">CLIENT TESTIMONIALS</h3>
+        <div class="reviews-container">
+          <div class="review">
+            <img
+              class="imgprofile"
+              src="assets/images/image-emily.jpg"
+              alt="Profile image of Emily"
+            />
+            <p class="reviewstext">
+              We put our trust in Sunnyside and they delivered, making sure our
+              needs were met and deadlines were always hit.
+            </p>
+            <div class="namereview">
+              <h3 class="name">Emily R.</h3>
+              <span class="ocupation">Marketing Director</span>
+            </div>
+          </div>
+          <div class="review">
+            <img
+              class="imgprofile"
+              src="assets/images/image-thomas.jpg"
+              alt="Profile image of Thomas"
+            />
+            <p class="reviewstext">
+              Sunnyside’s enthusiasm coupled with their keen interest in our
+              brand’s success made it a satisfying and enjoyable experience.
+            </p>
+            <div class="namereview">
+              <h3 class="name">Thomas S.</h3>
+              <span class="ocupation">Chief Operating Officer</span>
+            </div>
+          </div>
+          <div class="review">
+            <img
+              class="imgprofile"
+              src="assets/images/image-jennie.jpg"
+              alt="Profile image of Jennie"
+            />
+            <p class="reviewstext">
+              Incredible end result! Our sales increased over 400% when we
+              worked with Sunnyside. Highly recommended!
+            </p>
+            <div class="namereview">
+              <h3 class="name">Jennie F.</h3>
+              <span class="ocupation">Business Owner</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="lastphotos">
+        <div class="photo1"></div>
+        <div class="photo2"></div>
+        <div class="photo3"></div>
+        <div class="photo4"></div>
+      </div>
+    </main>
+    <footer class="footer">
+      <img class="footerlogo" src="assets/images/logo.svg" alt="" />
+      <div class="footermenu">
+        <a class="footertext">About</a>
+        <a class="footertext">Services</a>
+        <a class="footertext">Projects</a>
+      </div>
+      <div class="RRSS">
+        <img
+          class="icon facebook"
+          src="assets/images/icon-facebook.svg"
+          alt="Facebook icon"
+        />
+        <img
+          class="icon instagram"
+          src="assets/images/icon-instagram.svg"
+          alt="Instagram icon"
+        />
+        <img
+          class="icon twitter"
+          src="assets/images/icon-twitter.svg"
+          alt="Twitter icon"
+        />
+        <img
+          class="icon pinterest"
+          src="assets/images/icon-pinterest.svg"
+          alt="Pinterest icon"
+        />
+      </div>
+    </footer>
     <script src="js/scripts.js"></script>
   </body>
 </html>
