--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <main class="main">
       <div class="grid">
         <div class="box1"></div>
-        <div class="boxtext">
+        <div class="boxtext box2">
           <h2 class="imgtitle">Transform your brand</h2>
           <p class="text">
             We are a full-service creative agency specializing in helping brands
@@ -59,7 +59,7 @@
           <h4 class="learnmore">LEARN MORE</h4>
         </div>
         <div class="box3"></div>
-        <div class="boxtext">
+        <div class="boxtext box4">
           <h2 class="imgtitle">Stand out to the right audience</h2>
           <p class="text">
             Using a collaborative formula of designers, researchers,
